--- a/env.html
+++ b/env.html
@@ -22,17 +22,10 @@
             all methods of this API are available to the computer by default
         </p>
 
-        <br/><p class="text">_G - link to the global computer environment(not the global environment of the mod, which is available via global in unsafe mode, but the global environment of the script)</p>
-        <br/><p class="text">_ENV - the same as _G</p>
+        <br/><p class="text">_G / _ENV - link to the global computer environment(not the global environment of the mod, which is available via global in unsafe mode, but the global environment of the script)</p>
         <br/><p class="text">sm - link to scrap mechanic api: <a href="safeSmEnv.html" class="hyper">safe mode</a> | <a href="https://scrapmechanic.com/api/index.html" class="hyper">unsafe mode</a></p>
         <br/><p class="text">global - link to global namespace (unsafe mode only)</p>
         <br/><p class="text">self - link to ScriptableComputer script (unsafe mode only)</p>
-
-        <br/>
-        <br/>
-        <p class="text">
-            _VERSION:string - contains the name of the lua virtual machine that the mod uses
-        </p>
 
         <br/>
         <p class="text">
@@ -148,6 +141,7 @@ function callback_loop() end</code>
             warning(msg) - outputs a warning to the debugging console in the computer GUI (it always works, does not require to be enabled in the mod settings)
         </p>
 
+        <br/><p class="text">unpack(table):... - decompresses the table into values</p>
         <br/><p class="text">tostring(v) - see[<a target="_blank" href="https://www.lua.org/manual/5.1/" class="hyper">www.lua.org/manual/5.1</a>]</p>
         <br/><p class="text">tonumber(str) - see[<a target="_blank" href="https://www.lua.org/manual/5.1/" class="hyper">www.lua.org/manual/5.1</a>]</p>
         <br/><p class="text">clearregs() - clear all registers</p>
@@ -162,17 +156,17 @@ function callback_loop() end</code>
         <br/><p class="text">pcall(f, ...) -> (num, ...) - see[<a target="_blank" href="https://www.lua.org/manual/5.1/" class="hyper">www.lua.org/manual/5.1</a>]</p>
         <br/><p class="text">xpcall(f, err) -> (num, result) - see[<a target="_blank" href="https://www.lua.org/manual/5.1/" class="hyper">www.lua.org/manual/5.1</a>]</p>
         <br/><p class="text">select(index, ...) -> ... - see[<a target="_blank" href="https://www.lua.org/manual/5.1/" class="hyper">www.lua.org/manual/5.1</a>]</p>
-        <br/><p class="text">getParentComputers() -> table - returns table of parent computers datas</p>
-        <br/><p class="text">getChildComputers() -> table - returns table of child computers datas</p>
-        <br/><p class="text">getCurrentComputer() -> table - returns table of self computer data</p>
+        <br/><p class="text">getParentComputers() -> table - returns table of parent <a href="computer_data.html" class="hyper">computers data</a></p>
+        <br/><p class="text">getChildComputers() -> table - returns table of child <a href="computer_data.html" class="hyper">computers data</a></p>
+        <br/><p class="text">getCurrentComputer() -> table - returns table of self <a href="computer_data.html" class="hyper">computer data</a></p>
         <br/><a name="getComponent"></a><p class="text">getComponent(name) -> table - returns the api table of the first connected <a href="components.html" class="hyper">component</a> of the specified type. creates an exception if a component of this type is not connected</p>
         <br/><a name="getComponents"></a><p class="text">getComponents(name) -> table - returns a table with api tables of all connected <a href="components.html" class="hyper">components</a> of the specified type</p>
         <br/><a name="getMotorByLabel"></a><p class="text">getMotorByLabel(label:string) -> table - returns motor by label, if there is no motor with such label, it will return an exception</p>
         <br/><a name="getMotorsByLabel"></a><p class="text">getMotorsByLabel(label:string) -> table - returns a table of motors with the specified label</p>
         <br/><a name="getComponentByLabel"></a><p class="text">getComponentByLabel(componentType:string, label:string) -> table - returns component by label, if there is no component with such label, it will return an exception</p>
         <br/><a name="getComponentsByLabel"></a><p class="text">getComponentsByLabel(componentType:string, label:string) -> table - returns a table of components with the specified label</p>
-        <br/><p class="text">clientInvoke(code: str, args...) - performs invokation some code on clients(unsafe mode only)</p>
-        <br/><p class="text">clientInvokeTo(player_nickname/playerobj, code: str, args...) - performs invokation some code on client(unsafe mode only)</p>
+        <br/><p class="text">clientInvoke(code: str, args...) - performs invokation some code on clients (unsafe mode only)</p>
+        <br/><p class="text">clientInvokeTo(player_nickname/playerobj, code: str, args...) - performs invokation some code on client (unsafe mode only)</p>
 		<br/><p class="text">serverInvoke(code: str, args...) - calls the code on the server side from the client. available only from the code executed from clientInvoke (unsafe mode only)</p>
         <br/><p class="text">input(color: [str | nil]) -> bool - input selector (if color specified); returns true if one on selected inputs is true else returns false</p>
         <br/><p class="text">ninput(color: [str | nil]) -> table[num] - if color specified returns table of parent interactable powers; if no color - returns full table of powers</p>
@@ -319,16 +313,28 @@ function callback_loop()
 end</code>
         </pre>
 
-        <br/><p class="text">setCode(code:string) - overwrites the computer code but does not restart it.<br/>
-        <br/><p class="text">setEncryptedCode(bytecode:string, string|nil) - sets the encrypted code, which can be obtained from the enlua library. it can be used to receive OTA updates in encrypted form. the second argument is a comment for the user that can be set for the encrypted code<br/>
-        the changes will take effect after the reboot(you can trigger a software reboot) can be used, for example, to update the code through the antenna. <br/>
-        please note that if you had code encryption enabled, then after using this method, the code will no longer be encrypted. If you need to update the code so that it remains encrypted, you need to call encryptCode() immediately after this method.</p>
-        <br/><p class="text">getCode():string - returns the current computer code<br/>
-        please note that if the code is encrypted, this method will return a comment for the user, which indicates that the code is encrypted, it will not return the real code or its encrypted form<br/>
-        to avoid UB, before using this method, it is better to insert a check that the code is encrypted using isCodeEncrypted()</p>
+        <br/>
+        <p class="text">
+            setCode(code:string) - overwrites the computer code but does not restart it.
+            <br/>
+            please note that if you had code encryption enabled, then after using this method, the code will no longer be encrypted. If you need to update the code so that it remains encrypted, you need to call encryptCode() immediately after this method.
+        </p>
+
+        <br/>
+        <p class="text">getCode():string - returns the current computer code
+            <br/>
+            please note that if the code is encrypted, this method will return a comment for the user, which indicates that the code is encrypted, it will not return the real code or its encrypted form
+            <br/>
+            to avoid UB, before using this method, it is better to insert a check that the code is encrypted using isCodeEncrypted()
+        </p>
+
+        <br/>
+        <p class="text">setEncryptedCode(bytecode:string, string|nil) - sets the encrypted code, which can be obtained from the <a class="hyper" href="./enlua.html">enlua</a> library. it can be used to receive OTA updates in encrypted form. the second argument is a comment for the user that can be set for the encrypted code<br/>
+        the changes will take effect after the reboot(you can trigger a software reboot) can be used, for example, to update the code through the antenna.
+        </p>
 
         <br/><p class="text">encryptCode(string|nil):boolean - encrypts the code if it is not encrypted and does nothing if the code is already encrypted.<br/>
-        this action cannot be undone except by overwriting the encrypted code to a new version of the code use setCode()<br/>
+        this action cannot be undone except by overwriting the encrypted code to a new version of the code use setCode() / setEncryptedCode()<br/>
         this method does not restart the computer.<br/>
         you can pass a string here as a message for the user who opens the computer with the encrypted code. these message cannot be changed after the code is already encrypted, even if you call this method again.<br/>
         returns true if the code was encrypted, returns false if it was already encrypted at the time of the call or it could not be encrypted for some reason.</p>
@@ -342,8 +348,6 @@ end</code>
 
         <br/><p class="text">setAlwaysOn(state:boolean) - sets the always on flag, after installing it, the computer will work without giving a logical signal</p>
         <br/><p class="text">getAlwaysOn():boolean - returns the status of the always on flag</p>
-
-        <br/><p class="text">unpack(table):... - decompresses the table into values</p>
 
         <br/>
         <br/>
@@ -416,7 +420,7 @@ end
             </code>
         </pre>
 
-        <p class="text">working without callbacks</p>
+        <h1 style="color: white;">working without callbacks</h1>
         <pre>
             <code class="language-lua" style="width: fit-content;">if _endtick then
     --it is executed when you turn off the computer
