--- a/safeSmEnv.html
+++ b/safeSmEnv.html
@@ -26,32 +26,32 @@
 
         <br/>
         <p class="text">
-            sm.vec3 - <a href="https://scrapmechanic.com/api/namespace_Game_sm_vec3.html" class="hyper">full</a>
+            sm.<a href="https://scrapmechanic.com/api/namespace_Game_sm_vec3.html" class="hyper">vec3</a> - full
         </p>
 
         <br/>
         <p class="text">
-            sm.util - <a href="https://scrapmechanic.com/api/namespace_Game_sm_util.html" class="hyper">full</a>
+            sm.<a href="https://scrapmechanic.com/api/namespace_Game_sm_util.html" class="hyper">util</a> - full
         </p>
 
         <br/>
         <p class="text">
-            sm.quat - <a href="https://scrapmechanic.com/api/namespace_Game_sm_quat.html" class="hyper">full</a>
+            sm.<a href="https://scrapmechanic.com/api/namespace_Game_sm_quat.html" class="hyper">quat</a> - full
         </p>
 
         <br/>
         <p class="text">
-            sm.noise - <a href="https://scrapmechanic.com/api/namespace_Game_sm_noise.html" class="hyper">full</a>
+            sm.<a href="https://scrapmechanic.com/api/namespace_Game_sm_noise.html" class="hyper">noise</a> - full
         </p>
 
         <br/>
         <p class="text">
-            sm.color - <a href="https://scrapmechanic.com/api/namespace_Game_sm_color.html" class="hyper">full</a>
+            sm.<a href="https://scrapmechanic.com/api/namespace_Game_sm_color.html" class="hyper">color</a> - full
         </p>
 
         <br/>
         <p class="text">
-            sm.uuid - <a href="https://scrapmechanic.com/api/namespace_Game_sm_uuid.html" class="hyper">full</a>
+            sm.<a href="https://scrapmechanic.com/api/namespace_Game_sm_uuid.html" class="hyper">uuid</a> - full
         </p>
 
         <br/>
