--- a/contact_me.html
+++ b/contact_me.html
@@ -16,7 +16,8 @@
         <p class="text">communication methods:</p>
         <ul class="list">
             <li><span>discord: smlogic</span></li>
-            <li><span>discord server: <a target="_blank" class="hyper" href="https://discord.gg/uJrsmUjaMG">uJrsmUjaMG</a></span></li>
+            <li><span>discord server: <a target="_blank" class="hyper" href="https://discord.gg/uJrsmUjaMG">sm coders community</a></span></li>
+            <li><span>steam profile: <a target="_blank" class="hyper" href="https://steamcommunity.com/profiles/76561198977226540">BananaPen</a></span></li>
         </ul>
     </body>
 </html>
