--- a/SComputers/index.html
+++ b/SComputers/index.html
@@ -19,6 +19,7 @@
             <button class="cool-button red" onclick="window.location.href = './api.html'">api reference</button>
             <button class="cool-button blue" onclick="window.location.href = './addons.html'">addon list</button>
             <button class="cool-button yellow" onclick="window.location.href = './contact_me.html'">contact me</button>
+            <button class="cool-button purple" id="installButton" style="display: none;">install SComputers application</button>
 
             </br>
             <div class="cool-text">
@@ -53,6 +54,29 @@
                             console.log('ServiceWorker registration failed: ', error);
                         });
                 });
+            }
+        </script>
+
+        <script>
+            let deferredPrompt;
+            window.addEventListener('beforeinstallprompt', (e) => {
+                deferredPrompt = e;
+            });
+
+            const installButton = document.getElementById('installButton');
+            installButton.addEventListener('click', async () => {
+                if (deferredPrompt !== null) {
+                    deferredPrompt.prompt();
+                    const { outcome } = await deferredPrompt.userChoice;
+                    if (outcome === 'accepted') {
+                        deferredPrompt = null;
+                    }
+                }
+            });
+
+            if (!window.matchMedia('(display-mode: standalone)').matches) {
+                const installButton = document.getElementById('installButton');
+                installButton.style.display = 'inline-block';
             }
         </script>
     </body>
