try theme switch

--- a/SComputers/antenna.html
+++ b/SComputers/antenna.html
@@ -33,5 +33,7 @@
             <li><span>setActive(boolean) - turns the antenna on or off. The antenna is turned on by default</span></li>
             <li><span>isActive():boolean - returns the antenna activity status</span></li>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
