--- a/SComputers/api.html
+++ b/SComputers/api.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <a class="text" href="index.html">main page</a>
-        <h1 style="color:white;">SComputers - Api Reference</h1>
+        <h1>SComputers - Api Reference</h1>
 
-        <p style="color:white;">
+        <p>
             SComputers, this is a fork of the ScriptableComputer mod
             <br/>
             this fork is compatible with the code of the original ScriptableComputer
@@ -18,7 +18,7 @@
             however, programs written for this mod will not work on the original ScriptableComputer
         </p>
 
-        <p style="color:white;">
+        <p>
             in the original "ScriptableComputer" luaInLua worked terribly and contained a bunch of bugs.
             <br/>
             SComputers uses a FiOne_lua virtual machine that runs about 5 times faster
@@ -32,7 +32,7 @@
             if you install the <a class="hyper" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3177944610">betterAPI</a> dll mod, SComputers will use native lua, which will significantly increase performance.
         </p>
 
-        <p style="color:white;">
+        <p>
             SComputers has a lag-score mechanic that prevents lags from being called
             <br/>
             if the computer runs the code for a long time (it takes a lot of processor time) then he is credited with a lag-score, which can lead to missing clock cycles. which actually means that you won't get control for the next tick of the game
@@ -122,5 +122,7 @@
             <br/>
             if you need to distribute a large amount of data along with your creation in the workshop, you can use <a href="rom.html" class="hyper">"ROM disk"</a>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
