--- a/SComputers/base64.html
+++ b/SComputers/base64.html
@@ -29,5 +29,7 @@
             <li><span>base64.encode(string):string - converts a string to base64</span></li>
             <li><span>base64.decode(string):string - converts a string from base64</span></li>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
