--- a/SComputers/cameraTunnel.html
+++ b/SComputers/cameraTunnel.html
@@ -31,5 +31,7 @@
             <li><span>getCameraChannel():number - returns the set channel</span></li>
             <li><span>isChannelBusy(number):boolean - returns true if the channel passed to the method already has an image transmitting device that may cause a transmission conflict. It can also be used to search for a transmitter</span></li>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
