--- a/SComputers/chaff.html
+++ b/SComputers/chaff.html
@@ -35,5 +35,7 @@
             <li><span>chaff.maxCharges():number - returns the maximum number of shots that can be fired (50)</span></li>
             <li><span>chaff.getCharges():number - returns the remaining number of shots (default: 50)</span></li>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
