--- a/SComputers/colors.html
+++ b/SComputers/colors.html
@@ -189,5 +189,7 @@ display.flush()
 function callback_loop() end</code>
             </pre>
         </p>
+    
+        <script src="main.js"></script>
     </body>
 </html>
