--- a/SComputers/components.html
+++ b/SComputers/components.html
@@ -40,5 +40,7 @@
             <a class="hyper" href="./rom.html"><li><span>rom disk</span></li></a>
             <a class="hyper" href="./chaff.html"><li><span>chaff (dipole reflector)</span></li></a>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
