--- a/SComputers/computer_data.html
+++ b/SComputers/computer_data.html
@@ -37,5 +37,7 @@
             <li><span>computerdata.registers - direct access to the registers of this computer</span></li>
             <li><span>computerdata.crashstate - you can read the computer error message from this table. contains the following fields: hasException, exceptionMsg</span></li>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
