--- a/SComputers/contact_me.html
+++ b/SComputers/contact_me.html
@@ -19,5 +19,7 @@
             <li><span>discord server: <a target="_blank" class="hyper" href="https://discord.gg/uJrsmUjaMG">sm coders community</a></span></li>
             <li><span>steam profile: <a target="_blank" class="hyper" href="https://steamcommunity.com/profiles/76561198977226540">BananaPen</a></span></li>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
