--- a/SComputers/controllers.html
+++ b/SComputers/controllers.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <p>If you are not redirected, <a href="https://thedimondk.github.io/Controllers_SComputersAddon">click here</a>.</p>
-</body>
+
+        <script src="main.js"></script>
+    </body>
 </html>
