--- a/SComputers/disk.html
+++ b/SComputers/disk.html
@@ -58,5 +58,7 @@
             <li><span>disk.getFileList(path):table - returns a list of files in the current directory</span></li>
             <li><span>disk.getFolderList(path):table - returns a list of directories in the current directory</span></li>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
