--- a/SComputers/env.html
+++ b/SComputers/env.html
@@ -356,13 +356,13 @@ end</code>
 
         <br/>
         <br/>
-        <h1 style="color: white;">flags</h1>
+        <h1>flags</h1>
         <br/><p class="text">_endtick - this is the value that will be set to true in your _ENV if this is the last iteration of this computer</p>
         <br/><p class="text">_enableCallbacks - set this value to true in your _ENV if you want to use alternative callbacks</p>
         <br/><p class="text">_disableBsod - if you set this flag to _ENV, the computer will not display an error message on all connected screens and terminals when crashing</p>
 
         <br/>
-        <h1 style="color: white;">callbacks (_enableCallbacks: true)</h1>
+        <h1>callbacks (_enableCallbacks: true)</h1>
         <br/><p class="text">onStart() - called when your computer performs the first iteration</p>
         <br/><p class="text">onTick(dt:number) - every tick is called. dt in this case is the deltatime of TPS multiplied by the number of skipped ticks by the computer + 1</p>
         <br/><p class="text">onStop() - called when your computer does the last iteration</p>
@@ -396,7 +396,7 @@ _enableCallbacks = true</code>
         </pre>
 
         <br/>
-        <h1 style="color: white;">callbacks (_enableCallbacks: false)</h1>
+        <h1>callbacks (_enableCallbacks: false)</h1>
         <br/><p class="text">callback_loop() - implement this function in your code and it will be an alternative entry point</p>
         <br/><p class="text">callback_error(error:string):boolean - called in case of an error during code execution. after performing this function, the computer will crash anyway, if you do not want it, call reboot (in this case you will not receive an error message)</p>
 
@@ -425,7 +425,7 @@ end
             </code>
         </pre>
 
-        <h1 style="color: white;">working without callbacks</h1>
+        <h1>working without callbacks</h1>
         <pre>
             <code class="language-lua" style="width: fit-content;">if _endtick then
     --it is executed when you turn off the computer
@@ -442,5 +442,7 @@ local dt = getDeltaTimeTps() * (getSkippedTicks() + 1)
 --the code written here will be executed every tick when the computer is turned on
 --dt in this case is the deltatime of TPS multiplied by the number of skipped ticks by the computer + 1</code>
         </pre>
+    
+        <script src="main.js"></script>
     </body>
 </html>
