--- a/SComputers/fonts.html
+++ b/SComputers/fonts.html
@@ -545,5 +545,7 @@ end</code>
             wingding_32<br/>
             wingding_72
         </p>
+    
+        <script src="main.js"></script>
     </body>
 </html>
