--- a/SComputers/gui.html
+++ b/SComputers/gui.html
@@ -646,5 +646,7 @@ function callback_loop()
     end
 end</code>
         </pre>
+    
+        <script src="main.js"></script>
     </body>
 </html>
