--- a/SComputers/holoprojector.html
+++ b/SComputers/holoprojector.html
@@ -85,5 +85,7 @@ holo.setRotation(0, math.rad(tick * 0.5), 0)
 holo.setOffset(0, 1 + (math.sin(math.rad(tick)) * 0.8), 0)
 tick = tick + 2</code>
         </pre>
+    
+        <script src="main.js"></script>
     </body>
 </html>
