--- a/SComputers/index.html
+++ b/SComputers/index.html
@@ -19,7 +19,9 @@
             <button class="cool-button red" onclick="window.location.href = './api.html'">api reference</button>
             <button class="cool-button blue" onclick="window.location.href = './addons.html'">addon list</button>
             <button class="cool-button yellow" onclick="window.location.href = './contact_me.html'">contact me</button>
+            </br>
             <button class="cool-button purple" id="installButton" style="display: none;">install SComputers application</button>
+            <button class="cool-button gray" id="theme-toggle">change theme</button>
 
             </br>
             <div class="cool-text">
@@ -81,5 +83,7 @@
                 }
             });
         </script>
+
+        <script src="main.js"></script>
     </body>
 </html>
