--- a/SComputers/json.html
+++ b/SComputers/json.html
@@ -32,5 +32,7 @@
             <li><span>json.nativeEncode(table):string - alias to sm.json.writeJsonString. accepts a table, encodes it in json and returns a string</span></li>
             <li><span>json.nativeDecode(string):table - alias to sm.json.parseJsonString. accepts a string, decodes it as json, and returns a table</span></li>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
