--- a/SComputers/keyboard.html
+++ b/SComputers/keyboard.html
@@ -131,5 +131,7 @@ function callback_loop()
     display.flush()
 end</code>
         </pre>
+    
+        <script src="main.js"></script>
     </body>
 </html>
