--- a/SComputers/lag_policy.html
+++ b/SComputers/lag_policy.html
@@ -16,7 +16,7 @@
         <br/>
         <a class="text" href="api.html#docsel">main page - api reference</a>
 
-        <p style="color:white;">
+        <p>
             SComputers has a lag-score mechanic that prevents lags from being called
             <br/>
             if the computer runs the code for a long time (it takes a lot of processor time) then he is credited with a lag-score, which can lead to missing clock cycles. which actually means that you won't get control for the next tick of the game
@@ -47,5 +47,7 @@
             also, if you want, you can increase the maximum processor time to 40 ticks or even disable the limit (with the execution time limit disabled, you can accidentally make the game freeze)<br/>
             if you have disabled protection and your game is frozen by incorrect code, then close it and when entering the world, click "NO" (do not activate the mod) then remove the computer with the bad code and turn on the mod through the Permission Tool
         </div>
+    
+        <script src="main.js"></script>
     </body>
 </html>
