--- a/SComputers/libraries.html
+++ b/SComputers/libraries.html
@@ -39,5 +39,7 @@
             <a class="hyper" href="./xEngine.html"><li><span>xEngine (physical 3D engine)</span></li></a>
             <a class="hyper" href="./enlua.html"><li><span>enlua (encryption and execution of encrypted code) (NEW!)</span></li></a>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
