--- a/SComputers/making_addons.html
+++ b/SComputers/making_addons.html
@@ -89,5 +89,7 @@ end</code>
 print(getComponent("example").test())
             </code>
         </pre>
+    
+        <script src="main.js"></script>
     </body>
 </html>
