--- a/SComputers/motor.html
+++ b/SComputers/motor.html
@@ -195,5 +195,7 @@ function callback_loop()
     end
 end</code>
         </pre>
+    
+        <script src="main.js"></script>
     </body>
 </html>
