--- a/SComputers/nbs.html
+++ b/SComputers/nbs.html
@@ -226,5 +226,7 @@ function callback_loop()
     player:tick()
 end</code>
         </pre>
+    
+        <script src="main.js"></script>
     </body>
 </html>
