--- a/SComputers/onlineBoombox.html
+++ b/SComputers/onlineBoombox.html
@@ -38,5 +38,7 @@
             <li><span>onlineBoombox.setMute(state:boolean)</span></li>
             <li><span>onlineBoombox.setUrl(url:string)</span></li>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
