--- a/SComputers/pistonController.html
+++ b/SComputers/pistonController.html
@@ -74,5 +74,7 @@ end
 _enableCallbacks = true
             </code>
         </pre>
+    
+        <script src="main.js"></script>
     </body>
 </html>
