--- a/SComputers/radar.html
+++ b/SComputers/radar.html
@@ -143,5 +143,7 @@ function callback_loop()
     tick = tick + 16
 end</code>
         </pre>
+    
+        <script src="main.js"></script>
     </body>
 </html>
