--- a/SComputers/radarDetector.html
+++ b/SComputers/radarDetector.html
@@ -53,5 +53,7 @@ function callback_loop()
     display.flush()
 end</code>
         </pre>
+    
+        <script src="main.js"></script>
     </body>
 </html>
