--- a/SComputers/styles.html
+++ b/SComputers/styles.html
@@ -71,5 +71,7 @@ function callback_loop()
 end</code>
             </pre>
         </p>
+    
+        <script src="main.js"></script>
     </body>
 </html>
