--- a/SComputers/synthesizer.html
+++ b/SComputers/synthesizer.html
@@ -276,5 +276,7 @@ function callback_loop()
     timerhost:tick()
 end</code>
         </pre>
+    
+        <script src="main.js"></script>
     </body>
 </html>
