--- a/SComputers/utf8.html
+++ b/SComputers/utf8.html
@@ -30,5 +30,7 @@
             <li><span>utf8.len(string):number - returns the length of the string</span></li>
             <li><span>utf8.sub(string, i, j):string - it works the same way as string.sub does support Russian and special characters</span></li>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
