--- a/SComputers/utils.html
+++ b/SComputers/utils.html
@@ -42,5 +42,7 @@
             <li><span>utils.fromEuler(vec3):quat - custom fromEuler implementation</span></li>
             <li><span>utils.toEuler(quat):vec3 - converts a quaternion to an Euler angle</span></li>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
