--- a/SComputers/vdisplay.html
+++ b/SComputers/vdisplay.html
@@ -99,5 +99,7 @@ setComponentApi("display", vdisplay.bundle(displays, numberDisplaysByWidth))
 
 function callback_loop() end</code>
         </pre>
+    
+        <script src="main.js"></script>
     </body>
 </html>
