--- a/SComputers/wasd.html
+++ b/SComputers/wasd.html
@@ -40,5 +40,7 @@
 			<li><span>wasd.isQ():boolean - outputs a pulse signal when the Q button is pressed in the seat (if you have any mod installed that uses this (for example, font mod), it will only work with betterAPI)</span></li>
 			<li><span>wasd.isR():boolean - outputs a pulse signal when the R button is pressed in the seat (if you have any mod installed that uses this (for example, font mod), it will only work with betterAPI)</span></li>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
