--- a/SComputers/graphic.html
+++ b/SComputers/graphic.html
@@ -45,5 +45,7 @@
             ) - renders text in a box<br/>
             </span></li>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
