--- a/SComputers/inertialEngine.html
+++ b/SComputers/inertialEngine.html
@@ -153,5 +153,7 @@ function callback_loop()
     end
 end</code>
         </pre>
+    
+        <script src="main.js"></script>
     </body>
 </html>
