--- a/SComputers/midi.html
+++ b/SComputers/midi.html
@@ -96,5 +96,7 @@ function callback_loop()
     player:tick()
 end</code>
         </pre>
+    
+        <script src="main.js"></script>
     </body>
 </html>
