--- a/SComputers/port.html
+++ b/SComputers/port.html
@@ -39,5 +39,7 @@
             <li><span>sendTableTo(uniqueId:number, packet:table) - serializes the table as a row and sends it to a specific network port</span></li>
             <li><span>nextTable():table, number - takes a packet from the queue and tries to deserialize it as a table, returns the result only if it succeeded</span></li>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
