--- a/SComputers/rom.html
+++ b/SComputers/rom.html
@@ -98,5 +98,7 @@ function callback_loop()
     player:tick()
 end</code>
         </pre>
+    
+        <script src="main.js"></script>
     </body>
 </html>
