--- a/SComputers/syntax.html
+++ b/SComputers/syntax.html
@@ -28,5 +28,7 @@
             <li><span>syntax.format(string):string - formats the code</span></li>
             <li><span>syntax.highlight(code, errorLine:number|nil, palette:number|nil):string - makes syntax highlighting with colors through the '#' symbol for subsequent output to mygui. pass the palette number from 1 to 5. you can also pass the number of the line where the error occurred to highlight it in red</span></li>
         </ul>
+    
+        <script src="main.js"></script>
     </body>
 </html>
